correction on mobile style v2

--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -24,5 +24,10 @@ footer {
       height: 50px;
       margin-bottom: 10px;
     }
+
+    p {
+      text-align: center;
+      max-width: 40%;
+    }
   }
 }
