--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -42,12 +42,14 @@
     transform: translateY(-50%);
     text-align: left;
     font-size: 24px;
+    display: flex;
+    flex-direction: column
   }
 
   .banner_img {
     height: 111px !important;
   }
-  
+
 }
 
 .cards {
